--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,13 +367,14 @@ if(CMAKE_USE_OPENSSL)
     if(EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
       list(APPEND CURL_LIBS ${CONAN_LIB_DIRS_OPENSSL})
       include_directories(${CONAN_INCLUDE_DIRS_OPENSSL})
+      set(CMAKE_REQUIRED_INCLUDES ${CONAN_INCLUDE_DIRS_OPENSSL})
     else()
       list(APPEND CURL_LIBS ${OPENSSL_LIBRARIES})
       include_directories(${OPENSSL_INCLUDE_DIR})
+      set(CMAKE_REQUIRED_INCLUDES ${OPENSSL_INCLUDE_DIR})
     endif()
   endif()
 
-  set(CMAKE_REQUIRED_INCLUDES ${CONAN_INCLUDE_DIRS_OPENSSL})
   check_include_file("openssl/crypto.h" HAVE_OPENSSL_CRYPTO_H)
   check_include_file("openssl/err.h"    HAVE_OPENSSL_ERR_H)
   check_include_file("openssl/pem.h"    HAVE_OPENSSL_PEM_H)
